# seismograph

./: CMakeLists.txt  README.md  hw_config.c  logging.c  logging.h  main.cpp
lib/accelerometer/: CMakeLists.txt  accelerometer.c  accelerometer.h
lib/picow_ntp_client/: CMakeLists.txt  picow_ntp_client.c  picow_ntp_client.h  wifi_config.h
